statefulset/03_service_node_port.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: NodePort
  ports:
  - name: web
    port: 80
    nodePort: 30000
  selector:
    app: nginx
