statefulset/04_load_balancer.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: LoadBalancer
  ports:
  - name: web
    port: 80
  selector:
    app: nginx
