statefulset/05_service_clusterIP.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-cluster-ip
spec:
  ports:
  - name: web
    port: 80
    targetPort: 80
  selector:
    app: nginx
